[6R2yEhGU] changes for 5.x